# mlops-text-classifier

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  train-deploy.yml
configs/: train_config.yaml
configs/experiments/: exp1_baseline.yaml  exp2_higher_lr.yaml  exp3_longer_training.yaml  exp4_bert.yaml
data/raw/: .gitignore
deploy/: app.py  render.yaml  requirements.txt
scripts/: register_model.py
src/: logging_config.py
src/data/: download.py  preprocess.py  validate.py
src/serving/: app.py  health.py  schemas.py
src/training/: config.py  evaluate.py  train.py
tests/: conftest.py  test_api.py  test_data_validation.py  test_model.py  test_preprocessing.py
